--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "5.0.0",
-    "astro": "^3.0.5"
+    "astro": "^3.0.5",
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "0.12.0"
   }
 }
