--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "5.0.0",
     "astro": "^3.0.5",
+    "astro-icon": "0.8.1",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0"
   }
