--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro-icon": "0.8.1",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0"
+  },
+  "devDependencies": {
+    "postcss-nesting": "12.0.1"
   }
 }
