--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "5.0.0",
     "astro": "^3.0.5",
-    "astro-icon": "0.8.1",
-    "prettier": "3.0.3",
-    "prettier-plugin-astro": "0.12.0"
+    "astro-icon": "0.8.1"
   },
   "devDependencies": {
-    "postcss-nesting": "12.0.1"
+    "postcss-nesting": "12.0.1",
+    "@astrojs/tailwind": "5.0.0",
+    "prettier": "3.0.3",
+    "prettier-plugin-astro": "0.12.0"
   }
 }
