--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "astro-icon": "0.8.1"
   },
   "devDependencies": {
-    "postcss-nesting": "12.0.1",
     "@astrojs/tailwind": "5.0.0",
+    "@rollup/plugin-yaml": "4.1.1",
+    "postcss-nesting": "12.0.1",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0"
   }
