--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "astro": "^3.0.5",
-    "astro-icon": "0.8.1"
+    "astro-icon": "0.8.1",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@astrojs/check": "0.2.0",
     "@astrojs/tailwind": "5.0.0",
     "@astrojs/ts-plugin": "1.1.3",
     "@rollup/plugin-yaml": "4.1.1",
