--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "0.2.0",
+    "@astrojs/sitemap": "3.0.0",
     "@astrojs/tailwind": "5.0.0",
     "@astrojs/ts-plugin": "1.1.3",
     "@rollup/plugin-yaml": "4.1.1",
