--- a/src/data/homepage/temoignages.yaml
+++ b/src/data/homepage/temoignages.yaml
@@ -11,4 +11,4 @@ testimonials:
     author: Saskia Rysenbry, curator at
     company: School of System Change
 callToAction:
-  label: Lire les autre témoignages
+  label: Lire les autres témoignages
