Fixed typos and added 1 testimonial

--- a/src/data/temoignages/all-testimonials.yaml
+++ b/src/data/temoignages/all-testimonials.yaml
@@ -1,34 +1,37 @@
 - content: Chaque livrable démontre la capacité de Team UX à faire des propositions mûrement réfléchies, sur tous les aspects, toujours pertinentes et cohérentes.
   author: Etienne Knauer, SVP sales & marketing de
   company: DXOMARK
-- content: Nous avons fait appel à Team UX pour plusieurs sites web et l'espace authentifié de l'un de nos clients (habitat social). Yuna et Daniela se sont très vite acculturées au sujet et ont produit des prototypes intégrant les bonnes pratiques de qualité (Opquast) et les règles d'accessibilité (RGAA) relatives au design. Elles ont fait preuve d'une grande rigueur et d'une capacité d'écoute.
-  author: Jade Vincent, co-fondatrice de
-  company: Rose Primaire
-- content: Yuna and Daniela supported us with a brilliant UX strategy and wireframes for our new low-carbon website, which has made a huge difference to our organisation. Overall our website is performing very well and as we grow our impact and reach we’ll continue to work with them.
-  contentLang: en
-  author: Saskia Rysenbry, curator at School of
-  company: System Change
 - content: Vous pouvez être certaines qu'avec un rendu pareil, je ne manquerai pas de refaire appel à vous.
   author: Julie Lapouge, chef de projet chez
   company: Mink
-- content: Nous avons été séduits par la capacité d'accompagnement stratégique, la volonté d'aller au fond du sujet, la qualité du rendu et la simplicité de nos échanges. Merci à Team UX pour votre professionnalisme !
-  author: Aurélie Oudry, directrice de
-  company: Conserto Bordeaux
-- content: À travers de nombreux ateliers de design thinking, Yuna et Daniela nous ont permis de retranscrire des choses complexes et diffuses en idées simples, comprises de tous et activables. Le résultat a toujours été au rendez-vous.
-  author: Maxime Moné, co-fondateur de
-  company: Poool
 - content: Tout simplement ravis de la collaboration avec Yuna et Daniela. La qualité de leur travail, de l'accompagnement de clients novices en la matière, des livrables et des analyses constructives et leur dynamisme ont été un vrai plus pour ce projet.
   author: Alexandre Pronine, manager technique chez
   company: Ekino
-- content: Les ateliers organisés par la Team UX nous ont permis de définir précisément les contours de notre concept et d'en dégager l’essence. Complémentaires, fiables et réactives, Yuna et Daniela ont mis à profit leurs qualités respectives pour nous proposer leurs meilleurs travaux.
-  author: Sylvain Brudo, co-fondateur de
-  company: Journey
-- content: Comment arriver à travailler tous ensemble autour d’un si gros projet ? Daniela et Yuna, par leur expérience, leur bienveillance, leur écoute et leur méthodologie, ont complètement réussi leur challenge. Nous avons été impressionnés par la complicité qui est née entre nos collaborateurs et par les idées qui sont ressorties.
-  author: Co-gérante d'une société de
-  company: transport
 - content: Je suis très satisfait de notre collaboration avec Team UX. Yuna et Daniela forment un duo complémentaire et nous ont permis de renforcer la vision commune de notre projet avec mon associé. Pour chacun de nos questionnements, elles sont restées à l'écoute et ont trouvé des solutions.
   author: Kevin Dupouy, dirigeant de
   company: Dynamo Bordeaux
+- content: Nous avons fait appel à Team UX pour plusieurs sites web et l'espace authentifié de l'un de nos clients (habitat social). Yuna et Daniela se sont très vite acculturées au sujet et ont produit des prototypes intégrant les bonnes pratiques de qualité (Opquast) et les règles d'accessibilité (RGAA) relatives au design. Elles ont fait preuve d'une grande rigueur et d'une capacité d'écoute.
+  author: Jade Vincent, co-fondatrice de
+  company: Rose Primaire
+- content: Nous avons été séduits par la capacité d'accompagnement stratégique, la volonté d'aller au fond du sujet, la qualité du rendu et la simplicité de nos échanges. Merci à Team UX pour votre professionnalisme !
+  author: Aurélie Oudry, directrice de
+  company: Conserto Bordeaux
+- content: Les ateliers organisés par la Team UX nous ont permis de définir précisément les contours de notre concept et d'en dégager l’essence. Complémentaires, fiables et réactives, Yuna et Daniela ont mis à profit leurs qualités respectives pour nous proposer leurs meilleurs travaux.
+  author: Sylvain Brudo, co-fondateur de
+  company: Journey
 - content: Avec une grande capacité de compréhension de l’ensemble des process spécifiques à notre secteur d’activité, Team UX a parfaitement su répondre aux besoins de nos différents métiers. Merci à Daniela et à Yuna pour leur dynamisme, leur réactivité et leur professionnalisme.
   author: Dominique Barillot, ingénieur commercial chez
   company: Sys1
+- content: Yuna and Daniela supported us with a brilliant UX strategy and wireframes for our new low-carbon website, which has made a huge difference to our organisation. Overall our website is performing very well and as we grow our impact and reach we’ll continue to work with them.
+  contentLang: en
+  author: Saskia Rysenbry, curator at
+  company: School of System Change
+- content: À travers de nombreux ateliers de design thinking, Yuna et Daniela nous ont permis de retranscrire des choses complexes et diffuses en idées simples, comprises de tous et activables. Le résultat a toujours été au rendez-vous.
+  author: Maxime Moné, co-fondateur de
+  company: Poool
+- content: Comment arriver à travailler tous ensemble autour d’un si gros projet ? Daniela et Yuna, par leur expérience, leur bienveillance, leur écoute et leur méthodologie, ont complètement réussi leur challenge. Nous avons été impressionnés par la complicité qui est née entre nos collaborateurs et par les idées qui sont ressorties.
+  author: Co-gérante d'une
+  company: société de transport
+- content: Merci à vous les filles pour ce superbe travail, c’était une joie de faire ce projet avec vous. Vous avez toujours été d’une rigueur et d’une motivation sans faille.
+- author: Camille Fion, consultante technique chez 
+- company: Ekino
