--- a/src/data/nos-deux-profils/daniela.yaml
+++ b/src/data/nos-deux-profils/daniela.yaml
@@ -4,7 +4,7 @@ experience: 18 années d’expérience
 skills:
   - Design d’interfaces accessibles (2023)
   - Numérique responsable (2023)
-  - Qualité Web (2022)
+  - Qualité Web (2016 et 2022)
   - Accessibilité Web (2022)
   - Design et innovation sociale (2022)
   - Service design (2020)
