--- a/src/data/nos-deux-profils/yuna.yaml
+++ b/src/data/nos-deux-profils/yuna.yaml
@@ -3,7 +3,7 @@ title: Stratégie / UX
 experience: 11 années d’expérience
 skills:
   - Design d’interfaces accessibles (2023)
-  - Qualité Web (2022)
+  - Qualité Web (2016 et 2022)
   - Numérique responsable (2021)
   - Design de services (2021)
   - Recherche UX (2019)
