--- a/src/data/homepage/projects-teasing.yaml
+++ b/src/data/homepage/projects-teasing.yaml
@@ -1,9 +1,9 @@
 title: Team UX a travaillé sur...
 teasings:
-  - Une expérience de stand co-conçue pour <span class="text-primary">convaincre les habitantes et habitants</span> d’intégrer un projet sur le changement climatique
-  - Un outil interne repensé pour que <span class="text-primary">des équipes distribuées configurent et diffusent des messages</span> par satellite
-  - Une solution numérique repensée pour <span class="text-primary">suivre les dossiers des usagères et usagers</span> dans les établissements médico-sociaux
-  - Un site institutionnel et des espaces connectés repensés pour <span class="text-primary">rapprocher un bailleur social et ses cibles multiples</span>
-  - Un nouveau site Web pour <span class="text-primary">recruter les futures promotions d’une école</span> formant au changement systémique
+  - <span class="text-primary">Nous avons aidé l’équipe de Sys1</span> à repenser sa solution de gestion des dossiers informatisés des personnes suivies dans les établissements médico-sociaux
+  - <span class="text-primary">Nous avons accompagné la Ville de Mérignac</span> dans la co-création d’un stand participatif sur le dérèglement climatique
+  - <span class="text-primary">Nous avons collaboré avec Canal+International</span> et Ekino pour refondre un outil interne de messagerie par satellite
+  - <span class="text-primary">Nous avons conseillé les équipes du Groupe des Chalets</span> et de l’agence Rose Primaire dans la conception d’un site institutionnel et d’espaces connectés
+  - <span class="text-primary">Nous avons aidé School of System Change</span> à mettre au point sa stratégie UX pour recruter en ligne ses futures promotions
 callToAction:
   label: Voir tous nos projets
