--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/tailwind": "5.0.0",
     "@astrojs/ts-plugin": "1.1.3",
     "@rollup/plugin-yaml": "4.1.1",
+    "autoprefixer": "10.4.16",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0"
   }
