--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rollup/plugin-yaml": "4.1.1",
     "autoprefixer": "10.4.16",
     "prettier": "3.0.3",
-    "prettier-plugin-astro": "0.12.0"
+    "prettier-plugin-astro": "0.12.0",
+    "tailwindcss": "3.3.3"
   }
 }
