--- a/src/data/homepage/expertises.yaml
+++ b/src/data/homepage/expertises.yaml
@@ -1,6 +1,6 @@
 title: Nos expertises pour vous accompagner
 expertises:
-  - name: Stratégie & design UX/UI
+  - name: Stratégie & product design
     description: On intervient sur toutes les phases d’un projet de conception centrée autour des personnes utilisatrices.
     skills:
       - Cadrage stratégique et méthodologique
