--- a/src/data/homepage/projects-teasing.yaml
+++ b/src/data/homepage/projects-teasing.yaml
@@ -1,4 +1,4 @@
-title: Team UX a travaillé sur...
+title: Dernières collaborations
 teasings:
   - <span class="text-primary">Nous avons aidé l’équipe de Sys1</span> à repenser sa solution de gestion des dossiers informatisés des personnes suivies dans les établissements médico-sociaux
   - <span class="text-primary">Nous avons accompagné la Ville de Mérignac</span> dans la co-création d’un stand participatif sur le dérèglement climatique
