--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@astrojs/ts-plugin": "1.1.3",
     "@rollup/plugin-yaml": "4.1.1",
     "autoprefixer": "10.4.16",
+    "cssnano": "6.0.1",
+    "postcss-import": "15.1.0",
+    "postcss-preset-env": "9.2.0",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
     "tailwindcss": "3.3.3"
