--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "browserslist": {
+    "production": [
+      "ios_saf 7",
+      "Safari 7"
+    ]
+  },
   "dependencies": {
-    "astro": "^3.1.1",
+    "astro": "^3.3.0",
     "astro-icon": "0.8.1",
     "typescript": "5.2.2"
   },
@@ -21,8 +27,9 @@
     "@astrojs/tailwind": "5.0.0",
     "@astrojs/ts-plugin": "1.1.3",
     "@rollup/plugin-yaml": "4.1.1",
-    "autoprefixer": "10.4.16",
     "cssnano": "6.0.1",
+    "postcss": "8.4.31",
+    "postcss-cli": "10.1.0",
     "postcss-import": "15.1.0",
     "postcss-preset-env": "9.2.0",
     "prettier": "3.0.3",
