--- a/src/data/temoignages/all-testimonials.yaml
+++ b/src/data/temoignages/all-testimonials.yaml
@@ -35,3 +35,6 @@
 - content: "Merci à vous les filles pour ce superbe travail, c’était une joie de faire ce projet avec vous. Vous avez toujours été d’une rigueur et d’une motivation sans faille."
   author: Camille Fion, consultante technique chez 
   company: Ekino
+- content: "Yuna et Daniela sont très à l'écoute et fiables. Nous avons été impressionnées par leur expertise design et leur efficacité. Elles ont également une belle capacité à questionner le besoin et à le reformuler. Nous avons pu croiser nos expertises de coaching et design au bénéfice de notre client, une collectivité de Loire Atlantique. Une collaboration d'une excellente qualité avec une vision à 360."
+  author: Nathalie Dehouck et Marie Fréour, coachs et consultantes chez 
+  company: Sous le sens et Satori&co
