--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "astro": "^3.3.0",
-    "astro-icon": "0.8.1",
-    "typescript": "5.2.2"
+    "astro-icon": "0.8.1"
   },
   "devDependencies": {
     "@astrojs/check": "0.2.0",
@@ -25,9 +24,9 @@
     "postcss": "8.4.31",
     "postcss-cli": "10.1.0",
     "postcss-import": "15.1.0",
-    "postcss-preset-env": "9.2.0",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
