--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cssnano": "6.0.1",
     "postcss": "8.4.31",
     "postcss-cli": "10.1.0",
+    "postcss-flexbugs-fixes": "5.0.2",
     "postcss-import": "15.1.0",
     "prettier": "3.0.3",
     "prettier-plugin-astro": "0.12.0",
