--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "team-ux.com",
+  "license": "CC BY-NC-ND",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
